--- a/OneListApplication/OneListApplication/Views/Home/GetDesignDocument.cshtml
+++ b/OneListApplication/OneListApplication/Views/Home/GetDesignDocument.cshtml
@@ -5,68 +5,69 @@
 }
 
 
+<main>
+    <img src="~/images/ad.png" alt="project advertisement image" />
 
-<img src="~/images/ad.png" alt="project advertisement image"/>
-
-<h1>Design Document</h1>
-<h4>One List Inc. 2017.02.09</h4>
-<ul>
-    <li>Xavier Mercado</li>
-    <li>Nick Liu</li>
-    <li>Max Wu</li>
-</ul>
-
-<section>
-    <h2>Overview</h2>
-    <p>One List is a task management application that allows users to create their own to-do list with minimum effort. Featuring simple, clean user interface with modern design, One List allows users to better manage their daily tasks from smartphone and computer.</p>
-</section>
-<section>
-    <h2>Github & Winhost</h2>
-    <p>The application is currently hosted on Winhost with a github repository. See the details below for more information:</p>
-    <h3>Github Repository</h3>
-    <a href="https://github.com/xaviermercado/OneListPhase1">Check Out Our Github Now!</a>
-    <h3>Winhost Link</h3>
-    <a href="http://takethisapart.com/onelist ">Visit Our Site</a>
-</section>
-<section>
-    <h2>Competitors</h2>
-    <p>There are several existing to-do list applications in the market. Our top-3 competitors are:</p>
+    <h1>Design Document</h1>
+    <h4>One List Inc. 2017.02.09</h4>
     <ul>
-        <li>Wunderlist</li>
-        <li>Google Keep</li>
-        <li>Todoist</li>
+        <li>Xavier Mercado</li>
+        <li>Nick Liu</li>
+        <li>Max Wu</li>
     </ul>
-    <h3>Wunderlist</h3>
-    <p>Wunderlist is a cloud-based application. While Wunderlist is free, additional features are available in a paid version. As of June 2015, the app has over 13 million users. Wunderlist is argued to be one of the easiest to-do list apps to use for beginners.</p>
-    <h3>Google Keep</h3>
-    <p>Google Keep is an Evernote-style service for keeping notes, photos and even audio recordings that you don’t want to lose in your device.  It is an effective tool for keeping track of your tasks and checking them off when finished. However, Google Keep isn’t just for to-do list.</p>
-    <h3>Todoist</h3>
-    <p>With Todoist, users can manage lists, share them with others, and set reminders and deadlines. This collaboration feature is one of its main selling points. While the key features are free, Todoist has a paid version for power users out there.</p>
-</section>
-<section>
-    <h2>Business Strategy</h2>
-    <p>To set ourselves apart from competition, OneList will offer unique features that are not being implemented by others while trimming some of the excessive features to maintain our easy-to-use interface. The key features include ability to define and store reusable items as well as adding cost to items to keep track of total spending for shopping lists.</p>
-    <ul>
-        <li>Simple, clean user interface</li>
-        <li>Cost feature for tasks  (unique to One List)</li>
-        <li>Define and store items for reuse in the future  (unique to One List)</li>
-        <li>No need for download/update</li>
-    </ul>
-    <p>One List’s initial launch will be free of charge with regional advertisement featuring grocery stores, drug stores, etc. Based on our registered and active users, a power user (e.g. OneList Pro user) will be able to access our services with no ads and more features. Due to the scope of this project, this details regarding our expansion plan will not be discussed here.</p>
-    <iframe width="100%" height="500px" src="https://docs.google.com/spreadsheets/d/17YrRUw3JDvPaFlx7N-aibdGwhqTU6nzwBsZlyJNTAXE/pubhtml?gid=489727399&amp;single=true&amp;widget=true&amp;headers=false"></iframe>
-</section>
-<section>
-    <h2>Use Case Diagram</h2>
-    <p>To better demonstrate our features, the following Use Case Diagram is created to show the capabilities for users and admin. </p>
-    <iframe frameborder="0" style="width:100%;height:800px;" src="https://www.draw.io/?chrome=0&lightbox=1&highlight=0000ff&edit=_blank&layers=1&title=UseCaseDiagramOneList.html#Uhttps%3A%2F%2Fdrive.google.com%2Fuc%3Fid%3D0B_-vaLK_nw12NjN4QV9QVDdrVG8%26export%3Ddownload"></iframe>
-</section>
-<section>
-    <h2>ERD</h2>
-    <p>The following ERD diagram shows the relationships between our models.</p>
-    <iframe frameborder="0" style="width:100%;height:800px;" src="https://www.draw.io/?chrome=0&lightbox=1&highlight=0000ff&title=ERDOneList%20v2.0.html#Uhttps%3A%2F%2Fdrive.google.com%2Fuc%3Fid%3D0B_-vaLK_nw12eG1TV2hrWFlibWc%26export%3Ddownload"></iframe>
-</section>
-<section>
-    <h2>WebAPI for External Retail Coupons</h2>
-    <p>The following document shows the scecifications for our Web API, for more information visit: <a href="http://takethisapart.com/onelist/Developer/index"> Developer's API Help</a></p>
-    <iframe frameborder="0" style="width:100%;height:800px;" src="https://drive.google.com/open?id=1gBu6M8tqQXmPKHOPNYv13HTGze-Np4-aRD-jVAoGFhA"></iframe>
-</section>
+
+    <section>
+        <h2>Overview</h2>
+        <p>One List is a task management application that allows users to create their own to-do list with minimum effort. Featuring simple, clean user interface with modern design, One List allows users to better manage their daily tasks from smartphone and computer.</p>
+    </section>
+    <section>
+        <h2>Github & Winhost</h2>
+        <p>The application is currently hosted on Winhost with a github repository. See the details below for more information:</p>
+        <h3>Github Repository</h3>
+        <a href="https://github.com/xaviermercado/OneListPhase1">Check Out Our Github Now!</a>
+        <h3>Winhost Link</h3>
+        <a href="http://takethisapart.com/onelist ">Visit Our Site</a>
+    </section>
+    <section>
+        <h2>Competitors</h2>
+        <p>There are several existing to-do list applications in the market. Our top-3 competitors are:</p>
+        <ul>
+            <li>Wunderlist</li>
+            <li>Google Keep</li>
+            <li>Todoist</li>
+        </ul>
+        <h3>Wunderlist</h3>
+        <p>Wunderlist is a cloud-based application. While Wunderlist is free, additional features are available in a paid version. As of June 2015, the app has over 13 million users. Wunderlist is argued to be one of the easiest to-do list apps to use for beginners.</p>
+        <h3>Google Keep</h3>
+        <p>Google Keep is an Evernote-style service for keeping notes, photos and even audio recordings that you don’t want to lose in your device.  It is an effective tool for keeping track of your tasks and checking them off when finished. However, Google Keep isn’t just for to-do list.</p>
+        <h3>Todoist</h3>
+        <p>With Todoist, users can manage lists, share them with others, and set reminders and deadlines. This collaboration feature is one of its main selling points. While the key features are free, Todoist has a paid version for power users out there.</p>
+    </section>
+    <section>
+        <h2>Business Strategy</h2>
+        <p>To set ourselves apart from competition, OneList will offer unique features that are not being implemented by others while trimming some of the excessive features to maintain our easy-to-use interface. The key features include ability to define and store reusable items as well as adding cost to items to keep track of total spending for shopping lists.</p>
+        <ul>
+            <li>Simple, clean user interface</li>
+            <li>Cost feature for tasks  (unique to One List)</li>
+            <li>Define and store items for reuse in the future  (unique to One List)</li>
+            <li>No need for download/update</li>
+        </ul>
+        <p>One List’s initial launch will be free of charge with regional advertisement featuring grocery stores, drug stores, etc. Based on our registered and active users, a power user (e.g. OneList Pro user) will be able to access our services with no ads and more features. Due to the scope of this project, this details regarding our expansion plan will not be discussed here.</p>
+        <iframe width="100%" height="500px" src="https://docs.google.com/spreadsheets/d/17YrRUw3JDvPaFlx7N-aibdGwhqTU6nzwBsZlyJNTAXE/pubhtml?gid=489727399&amp;single=true&amp;widget=true&amp;headers=false"></iframe>
+    </section>
+    <section>
+        <h2>Use Case Diagram</h2>
+        <p>To better demonstrate our features, the following Use Case Diagram is created to show the capabilities for users and admin. </p>
+        <iframe frameborder="0" style="width:100%;height:800px;" src="https://www.draw.io/?chrome=0&lightbox=1&highlight=0000ff&edit=_blank&layers=1&title=UseCaseDiagramOneList.html#Uhttps%3A%2F%2Fdrive.google.com%2Fuc%3Fid%3D0B_-vaLK_nw12NjN4QV9QVDdrVG8%26export%3Ddownload"></iframe>
+    </section>
+    <section>
+        <h2>ERD</h2>
+        <p>The following ERD diagram shows the relationships between our models.</p>
+        <iframe frameborder="0" style="width:100%;height:800px;" src="https://www.draw.io/?chrome=0&lightbox=1&highlight=0000ff&title=ERDOneList%20v2.0.html#Uhttps%3A%2F%2Fdrive.google.com%2Fuc%3Fid%3D0B_-vaLK_nw12eG1TV2hrWFlibWc%26export%3Ddownload"></iframe>
+    </section>
+    <section>
+        <h2>WebAPI for External Retail Coupons</h2>
+        <p>The following document shows the scecifications for our Web API, for more information visit: <a href="http://takethisapart.com/onelist/Developer/index"> Developer's API Help</a></p>
+        <iframe frameborder="0" style="width:100%;height:800px;" src="https://drive.google.com/open?id=1gBu6M8tqQXmPKHOPNYv13HTGze-Np4-aRD-jVAoGFhA"></iframe>
+    </section>
+</main>
