--- a/OneListApplication/OneListApplication/Views/Home/ResetPassword.cshtml
+++ b/OneListApplication/OneListApplication/Views/Home/ResetPassword.cshtml
@@ -5,24 +5,24 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-
-@using (Html.BeginForm("ResetPassword", "Home", new { ReturnUrl = ViewBag.ReturnUrl },
-                                    FormMethod.Post, new { @class = "form-signin col-lg-4 col-lg-offset-4" }))
-{
-    <h3 class="text-center">Reset Password</h3>
-    @Html.AntiForgeryToken()
-    <div class="form-horizontal">
+<main>
+    @using (Html.BeginForm("ResetPassword", "Home", new { ReturnUrl = ViewBag.ReturnUrl },
+                                            FormMethod.Post, new { @class = "form-signin col-lg-4 col-lg-offset-4" }))
+    {
+        <h3 class="text-center">Reset Password</h3>
+        @Html.AntiForgeryToken()
+        <div class="form-horizontal">
             <div class="form-group text-center">
-                @Html.EditorFor(model => model.Password, new { htmlAttributes = new { @class = "form-control", @placeholder = "New Password", @name= "password" } })
+                @Html.EditorFor(model => model.Password, new { htmlAttributes = new { @class = "form-control", @placeholder = "New Password", @name = "password" } })
                 @Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-danger col-lg-10 col-lg-offset-2" })
                 @Html.EditorFor(model => model.ConfirmPassword, new { htmlAttributes = new { @class = "form-control", @placeholder = "Comfirm Password", @name = "passwordConfirm" } })
                 @Html.ValidationMessageFor(model => model.ConfirmPassword, "", new { @class = "text-danger col-lg-10 col-lg-offset-2" })
-                <div class="g-recaptcha" data-sitekey="6LeQxhsUAAAAAFWNEvxImWCM-lb6o0LCquBoT_1O"></div>                
+                <div class="g-recaptcha" data-sitekey="6LeQxhsUAAAAAFWNEvxImWCM-lb6o0LCquBoT_1O"></div>
                 <input type="hidden" name="passwordToken" value="@ViewBag.PasswordToken" />
                 <input type="hidden" name="userID" value="@ViewBag.UserID" />
                 <button class="btn btn-primary" type="submit">Reset</button><br />
                 @Html.Raw(ViewBag.Result)
-          </div>
+            </div>
         </div>
-}
-
+    }
+</main>
