--- a/OneListApplication/OneListApplication/Views/Home/ForgotPassword.cshtml
+++ b/OneListApplication/OneListApplication/Views/Home/ForgotPassword.cshtml
@@ -4,34 +4,34 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
+<main>
+    @using (Html.BeginForm("ForgotPassword", "Home", new { ReturnUrl = ViewBag.ReturnUrl },
+                                            FormMethod.Post, new { @class = "form-signin col-lg-4 col-lg-offset-4" }))
+    {
+        // @Html.AntiForgeryToken()
+        <h3 class="text-center">Forgot Your Password</h3>
 
-@using (Html.BeginForm("ForgotPassword", "Home", new { ReturnUrl = ViewBag.ReturnUrl },
-                                    FormMethod.Post, new { @class = "form-signin col-lg-4 col-lg-offset-4" }))
-{
-    // @Html.AntiForgeryToken()
-    <h3 class="text-center">Forgot Your Password</h3>
+        <div class="form-horizontal">
+            <div class="form-group text-center">
+                <input type="text" name="email" class="form-control" placeholder="Enter your account email" /><br />
+                <button class="btn btn-primary" type="submit">Submit</button><br />
+            </div>
+            @{
+                if (ViewBag.Fail != null)
+                {
+                    <div class="text-danger">
+                        @Html.Raw(ViewBag.Fail)
+                    </div>
+                }
+                else
+                {
+                    <div class="text-success">
+                        @Html.Raw(ViewBag.Success)
+                    </div>
+                }
+            }
 
-    <div class="form-horizontal">
-        <div class="form-group text-center">
-            <input type="text" name="email" class="form-control" placeholder="Enter your account email"/><br />
-            <button class="btn btn-primary" type="submit">Submit</button><br />
+
         </div>
-        @{
-            if (ViewBag.Fail!=null)
-            {
-                <div class="text-danger">
-                    @Html.Raw(ViewBag.Fail)
-                </div>
-            }
-            else
-            {
-                <div class="text-success">
-                    @Html.Raw(ViewBag.Success)
-                </div>
-            }
-        }
-
-
-    </div>
-}
-
+                }
+</main>
