--- a/OneListApplication/OneListApplication/Views/Home/Login.cshtml
+++ b/OneListApplication/OneListApplication/Views/Home/Login.cshtml
@@ -5,42 +5,43 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
+<main>
+    <div class="container">
+        <h3 class="text-center">Login</h3>
 
-<div class="container">
-    <h3 class="text-center">Login</h3>
+        <div class="tab-content">
+            <div class="tab-pane active" id="login">
+                @using (Html.BeginForm("Login", "Home",
+        new { ReturnUrl = ViewBag.ReturnUrl },
+        FormMethod.Post, new { @class = "form-signin col-lg-4 col-lg-offset-4" }))
+                {
+                    @Html.AntiForgeryToken()
+                    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
-    <div class="tab-content">
-     <div class="tab-pane active" id="login">
-     @using (Html.BeginForm("Login", "Home",
-            new { ReturnUrl = ViewBag.ReturnUrl },
-            FormMethod.Post, new { @class = "form-signin col-lg-4 col-lg-offset-4" } ))
-     {
-            @Html.AntiForgeryToken()
-            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                    <div class="span12 text-center">
+                        <i class="fa fa-user-circle-o fa-4x" aria-hidden="true"></i>
+                    </div>
+                    @Html.EditorFor(model => model.UserName, new { htmlAttributes = new { @class = "form-control ", @placeholder = "Username" } })
+                    @Html.ValidationMessageFor(model => model.UserName, "", new { @class = "text-danger col-lg-10 col-lg-offset-2" })
+                    @Html.EditorFor(model => model.Password, new { htmlAttributes = new { @class = "form-control ", @placeholder = "Password" } })
+                    @Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-danger col-lg-10 col-lg-offset-2" })
 
-            <div class="span12 text-center">
-                <i class="fa fa-user-circle-o fa-4x" aria-hidden="true"></i>
+                    <div class="text-center">
+                        <div class="text-danger">
+                            @Html.Raw(ViewBag.ErrorMessage)
+                        </div>
+                        <div id="remember" class="checkbox">
+                            <label class="form-check-label">
+                                <input name="rememberMe" type="checkbox" value="true"> Remember Me
+                            </label>
+                        </div>
+                        <div class="text-center">
+                            <button class="btn btn-bk" type="submit">Sign in</button><br />
+                            @Html.ActionLink("Forgot Password", "ForgotPassword", "Home")
+                        </div>
+                    </div>
+                }
             </div>
-            @Html.EditorFor(model => model.UserName, new { htmlAttributes = new { @class = "form-control ", @placeholder = "Username" } })
-            @Html.ValidationMessageFor(model => model.UserName, "", new { @class = "text-danger col-lg-10 col-lg-offset-2" })
-            @Html.EditorFor(model => model.Password, new { htmlAttributes = new { @class = "form-control ", @placeholder = "Password" } })
-            @Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-danger col-lg-10 col-lg-offset-2" })
-
-            <div class="text-center">
-                <div class="text-danger">
-                    @Html.Raw(ViewBag.ErrorMessage)
-                </div>
-                <div id="remember" class="checkbox">
-                    <label class="form-check-label">
-                        <input name="rememberMe" type="checkbox" value="true"> Remember Me
-                    </label>
-                </div>
-                <div class="text-center">
-                    <button class="btn btn-bk" type="submit">Sign in</button><br />
-                    @Html.ActionLink("Forgot Password", "ForgotPassword", "Home")
-                </div>
-                </div>
-            }
         </div>
     </div>
-</div>
+</main>
