--- a/OneListApplication/OneListApplication/Views/Home/Register.cshtml
+++ b/OneListApplication/OneListApplication/Views/Home/Register.cshtml
@@ -5,34 +5,36 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<div class="container">
-    <h3 class="text-center">Register</h3>
+<main>
+    <div class="container">
+        <h3 class="text-center">Register</h3>
 
-    <div class="tab-content">
-       <div class="tab-pane active" id="register">
-        @using (Html.BeginForm("Register", "Home",
-            new { ReturnUrl = ViewBag.ReturnUrl },
-            FormMethod.Post, new { @class = "form-signin col-lg-4 col-lg-offset-4" }))
-            {
-                @Html.AntiForgeryToken()
-                @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-                <div class="span12 text-center">
-                    <i class="fa fa-user-circle-o fa-4x" aria-hidden="true"></i>
-                </div>
-                @Html.EditorFor(model => model.UserName, new { htmlAttributes = new { @class = "form-control", @placeholder = "Username" } })
-                @Html.ValidationMessageFor(model => model.UserName, "", new { @class = "text-danger col-lg-10 col-lg-offset-2" })
-                @Html.EditorFor(model => model.Email, new { htmlAttributes = new { @class = "form-control", @placeholder = "Email address" } })
-                @Html.ValidationMessageFor(model => model.Email, "", new { @class = "text-danger col-lg-10 col-lg-offset-2" })
-                @Html.EditorFor(model => model.Password, new { htmlAttributes = new { @class = "form-control", @placeholder = "Create Password" } })
-                @Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-danger col-lg-10 col-lg-offset-2" })
-                @Html.EditorFor(model => model.ConfirmPassword, new { htmlAttributes = new { @class = "form-control", @placeholder = "Comfirm Password" } })
-                @Html.ValidationMessageFor(model => model.ConfirmPassword, "", new { @class = "text-danger col-lg-10 col-lg-offset-2" })
-                <div class="g-recaptcha" data-sitekey="6LeQxhsUAAAAAFWNEvxImWCM-lb6o0LCquBoT_1O"></div>
-                <div class="text-center">
-                    <button class="btn btn-bk btn-register" type="submit">Register</button><br />
-                </div>
-        }
-        @Html.Raw(ViewBag.Result)
+        <div class="tab-content">
+            <div class="tab-pane active" id="register">
+                @using (Html.BeginForm("Register", "Home",
+        new { ReturnUrl = ViewBag.ReturnUrl },
+        FormMethod.Post, new { @class = "form-signin col-lg-4 col-lg-offset-4" }))
+                {
+                    @Html.AntiForgeryToken()
+                    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                    <div class="span12 text-center">
+                        <i class="fa fa-user-circle-o fa-4x" aria-hidden="true"></i>
+                    </div>
+                    @Html.EditorFor(model => model.UserName, new { htmlAttributes = new { @class = "form-control", @placeholder = "Username" } })
+                    @Html.ValidationMessageFor(model => model.UserName, "", new { @class = "text-danger col-lg-10 col-lg-offset-2" })
+                    @Html.EditorFor(model => model.Email, new { htmlAttributes = new { @class = "form-control", @placeholder = "Email address" } })
+                    @Html.ValidationMessageFor(model => model.Email, "", new { @class = "text-danger col-lg-10 col-lg-offset-2" })
+                    @Html.EditorFor(model => model.Password, new { htmlAttributes = new { @class = "form-control", @placeholder = "Create Password" } })
+                    @Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-danger col-lg-10 col-lg-offset-2" })
+                    @Html.EditorFor(model => model.ConfirmPassword, new { htmlAttributes = new { @class = "form-control", @placeholder = "Comfirm Password" } })
+                    @Html.ValidationMessageFor(model => model.ConfirmPassword, "", new { @class = "text-danger col-lg-10 col-lg-offset-2" })
+                    <div class="g-recaptcha" data-sitekey="6LeQxhsUAAAAAFWNEvxImWCM-lb6o0LCquBoT_1O"></div>
+                    <div class="text-center">
+                        <button class="btn btn-bk btn-register" type="submit">Register</button><br />
+                    </div>
+                }
+                @Html.Raw(ViewBag.Result)
+            </div>
+        </div>
     </div>
-    </div>
-</div>
+</main>
