--- a/OneListApplication/OneListApplication/Views/Item/ItemCategoryDetail.cshtml
+++ b/OneListApplication/OneListApplication/Views/Item/ItemCategoryDetail.cshtml
@@ -5,46 +5,49 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-@Html.Partial("~/Views/Item/_ItemPageTopNav.cshtml")
-<div class="col-md-8 col-sm-12">
-    <h2>ItemCategoryDetail</h2>
+<main>
+    @Html.Partial("~/Views/Item/_ItemPageTopNav.cshtml")
+    <div class="col-md-8 col-sm-12">
+        <h2>ItemCategoryDetail</h2>
 
-    <div>
-        <dl class="dl-horizontal">
-            <dt>
-                @Html.DisplayNameFor(model => model.ItemCategoryName)
-            </dt>
+        <div>
+            <dl class="dl-horizontal">
+                <dt>
+                    @Html.DisplayNameFor(model => model.ItemCategoryName)
+                </dt>
 
-            <dd>
-                @Html.DisplayFor(model => model.ItemCategoryName)
-            </dd>
-        </dl>
-    </div>
-    @if (Model.allItemsInCategory.Count() > 0)
-    {
-    <table class="table">
-        <tr>
-            <th>Item Name</th>
-            <th>Item Description</th>
-        </tr>
-
-        @foreach (var item in Model.allItemsInCategory)
+                <dd>
+                    @Html.DisplayFor(model => model.ItemCategoryName)
+                </dd>
+            </dl>
+        </div>
+        @if (Model.allItemsInCategory.Count() > 0)
         {
-            <tr>
-                <td>
-                    @Html.DisplayFor(modelItem => item.ItemName)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.ItemDescription)
-                </td>
-            </tr>
+            <table class="table">
+                <tr>
+                    <th>Item Name</th>
+                    <th>Item Description</th>
+                </tr>
+
+                @foreach (var item in Model.allItemsInCategory)
+                {
+                    <tr>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.ItemName)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.ItemDescription)
+                        </td>
+                    </tr>
+                }
+            </table>
         }
-    </table>
-    }
-    else {
-        <p class="text-danger">No items in this category</p>
-    }
-    <p>
-        @Html.ActionLink("Edit", "EditItemCategory", new { id = Model.ItemCategoryID }) |
-        @Html.ActionLink("Back to List", "ItemCategoryManagement", "Item")
-</div>
+        else
+        {
+            <p class="text-danger">No items in this category</p>
+        }
+        <p>
+            @Html.ActionLink("Edit", "EditItemCategory", new { id = Model.ItemCategoryID }) |
+            @Html.ActionLink("Back to List", "ItemCategoryManagement", "Item")
+    </div>
+</main>
