cors for update method on webapi

--- a/OneListApplication/OneListApplication/Views/List/EditList.cshtml
+++ b/OneListApplication/OneListApplication/Views/List/EditList.cshtml
@@ -99,7 +99,7 @@
                 </table>
             </div> 
         </div>
-      
+      @Html.ActionLink("Complete List", "CompleteList", "List", new { id = Model.ListID }, new { @class = "btn btn-bk" })
     }
 
   </div>
