--- a/OneListApplication/OneListApplication/Views/List/_ListSideBar.cshtml
+++ b/OneListApplication/OneListApplication/Views/List/_ListSideBar.cshtml
@@ -2,7 +2,7 @@
 <div class="col-md-4">
     <ul class="nav navbar-nav side-nav">
         <li class="active">
-            <a class="nav-link active" href="@Url.Action("ListManagement", "Home")"><i class="fa fa-list-alt" aria-hidden="true"></i>&nbsp;&nbsp;All Lists</a>
+            <a class="nav-link active" href="@Url.Action("ListManagement", "Home")"><i class="fa fa-list-alt" aria-hidden="true"></i>&nbsp;&nbsp;Current Lists</a>
         </li>
         <li>
             <a class="nav-link" href="@Url.Action("CreateList", "List")"><i class="fa fa-plus" aria-hidden="true"></i>&nbsp;&nbsp;Create List</a>
